--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "constructs": "^3.3.160",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "@types/uuid": "^8.3.1",
+    "esbuild": "^0.13.4",
+    "uuid": "^8.3.2"
   }
 }
