--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.1",
+    "aws-sdk": "^2.1002.0",
     "esbuild": "^0.13.4",
     "uuid": "^8.3.2"
   }
