--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@types/uuid": "^8.3.1",
+    "@types/aws-lambda": "^8.10.83",
     "aws-sdk": "^2.1002.0",
-    "esbuild": "^0.13.4",
-    "uuid": "^8.3.2"
+    "esbuild": "^0.13.4"
   }
 }
